--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -3,7 +3,7 @@
         "en":"Gear Position",
         "fr":"Emplacement",
         "es":"Posición del equipo",
-        "zh-cn":"裝備位置",
+        "zh-cn":"装备位置",
         "zh-tw":"",
         "kr":"",
         "ru":"Слот Экипировки",
@@ -22,7 +22,7 @@
         "en":"Required Class",
         "fr":"Classe Requise",
         "es":"Clase requerida",
-        "zh-cn":"職業限制",
+        "zh-cn":"职业限制",
         "zh-tw":"",
         "kr":"",
         "ru":"Требуемый Класс",
@@ -41,7 +41,7 @@
         "en":"Required Gender",
         "fr":"Genre Requis",
         "es":"Sexo requiredo",
-        "zh-cn":"性別限制",
+        "zh-cn":"性别限制",
         "zh-tw":"",
         "kr":"",
         "ru":"Требуемый Пол",
@@ -60,7 +60,7 @@
         "en":"Required Lv",
         "fr":"Niveau Requis",
         "es":"Nivel requerido",
-        "zh-cn":"等級限制",
+        "zh-cn":"等级限制",
         "zh-tw":"",
         "kr":"",
         "ru":"Требуемый уровень",
@@ -79,7 +79,7 @@
         "en":"Spirit Lv",
         "fr":"Nv Esprit",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"精灵等级",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -98,7 +98,7 @@
         "en":"Soul Lv",
         "fr":"Nv d'Âme",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"精魂等级",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -117,7 +117,7 @@
         "en":"APT",
         "fr":"APT",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"资质",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -136,7 +136,7 @@
         "en":"Spirit Talent",
         "fr":"Talent d'Esprit",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"精灵天赋",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -174,7 +174,7 @@
         "en":"Mod Stats",
         "fr":"Mod Stats",
         "es":"Mod Stats",
-        "zh-cn":"改造數值",
+        "zh-cn":"改造数值",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -193,7 +193,7 @@
         "en":"ENCH Stats",
         "fr":"AMELIO Stats",
         "es":"Encantos Estadísticas",
-        "zh-cn":"强化數值",
+        "zh-cn":"强化数值",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -231,7 +231,7 @@
         "en":"Passive",
         "fr":"Passif",
         "es":"Pasivo",
-        "zh-cn":"被動",
+        "zh-cn":"被动",
         "zh-tw":"",
         "kr":"",
         "ru":"Пассивный",
@@ -250,7 +250,7 @@
         "en":"{0} sec cooldown",
         "fr":"{0} sec de recharge",
         "es":"{0} sec para Utilizar",
-        "zh-cn":"{0} 秒冷卻時間",
+        "zh-cn":"{0} 秒冷却时间",
         "zh-tw":"",
         "kr":"",
         "ru":"{0} сек перезарядка",
@@ -269,7 +269,7 @@
         "en":"Instant",
         "fr":"Instantané",
         "es":"Instantánea",
-        "zh-cn":"瞬發",
+        "zh-cn":"瞬发",
         "zh-tw":"",
         "kr":"",
         "ru":"Мгновенный",
@@ -288,7 +288,7 @@
         "en":"Set as Target",
         "fr":"Cibler",
         "es":"Fijar como objetivo",
-        "zh-cn":"選擇目標",
+        "zh-cn":"选择目标",
         "zh-tw":"",
         "kr":"",
         "ru":"Нацелится",
@@ -307,7 +307,7 @@
         "en":"Whisper",
         "fr":"Chuchoter",
         "es":"Susurro",
-        "zh-cn":"密語",
+        "zh-cn":"密语",
         "zh-tw":"",
         "kr":"",
         "ru":"Шепотом",
@@ -326,7 +326,7 @@
         "en":"Copy name",
         "fr":"Copier le nom",
         "es":"Copia Nombre",
-        "zh-cn":"複製姓名",
+        "zh-cn":"复制姓名",
         "zh-tw":"",
         "kr":"",
         "ru":"Копировать Имя",
@@ -345,7 +345,7 @@
         "en":"Invite Group",
         "fr":"Inviter Groupe",
         "es":"Grupo de Invitación",
-        "zh-cn":"邀請組隊",
+        "zh-cn":"邀请组队",
         "zh-tw":"",
         "kr":"",
         "ru":"Пригласить в группу",
@@ -364,7 +364,7 @@
         "en":"Set new leader",
         "fr":"Changer leader",
         "es":"Establecer un nuevo líder",
-        "zh-cn":"設爲隊長",
+        "zh-cn":"设为队长",
         "zh-tw":"",
         "kr":"",
         "ru":"Сменить лидера",
@@ -383,7 +383,7 @@
         "en":"Expel from group",
         "fr":"Expulser du groupe",
         "es":"Expulsar del grupo",
-        "zh-cn":"踢出隊伍",
+        "zh-cn":"踢出队伍",
         "zh-tw":"",
         "kr":"",
         "ru":"Исключить из группы",
@@ -402,7 +402,7 @@
         "en":"Leave group",
         "fr":"Partir du groupe",
         "es":"Deje el grupo",
-        "zh-cn":"離開隊伍",
+        "zh-cn":"离开队伍",
         "zh-tw":"",
         "kr":"",
         "ru":"Покинуть Группу",
@@ -421,7 +421,7 @@
         "en":"Disband group",
         "fr":"Dissoudre le groupe",
         "es":"Disolver el grupo",
-        "zh-cn":"解散隊伍",
+        "zh-cn":"解散队伍",
         "zh-tw":"",
         "kr":"",
         "ru":"Распустить группу",
@@ -440,7 +440,7 @@
         "en":"Check Gear",
         "fr":"Inspecter",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"查看装备",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -459,7 +459,7 @@
         "en":"Invite Guild",
         "fr":"Inviter Guilde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"邀请入会",
         "zh-tw":"",
         "kr":"",
         "ru":"",
