--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -3,7 +3,7 @@
         "en": "Normal Reward",
         "fr": "Récompense normale",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "通常奖励",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -22,7 +22,7 @@
         "en": "Special Reward",
         "fr": "Récompense spéciale",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "特殊奖励",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -41,7 +41,7 @@
         "en": "End Reward Left: {0}/3",
         "fr": "Récomp. de Fin Restante: {0}/3",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "剩余进入次数: {0}/3",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -60,7 +60,7 @@
         "en": "My Group",
         "fr": "Mon Groupe",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "我的队伍",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -79,7 +79,7 @@
         "en": "Invite in the Group",
         "fr": "Inviter dans le Groupe",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "邀请组队",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -98,7 +98,7 @@
         "en": "Enter",
         "fr": "Entrer",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "进入",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -117,7 +117,7 @@
         "en": "Buy 1",
         "fr": "Acheter 1",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "购买1次",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -136,7 +136,7 @@
         "en": "Refresh",
         "fr": "Rafraichir",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "重置",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -155,7 +155,7 @@
         "en": "Back to Hall",
         "fr": "Retour à la liste",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "返回大厅",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -174,7 +174,7 @@
         "en": "Deathly Mineshaft",
         "fr": "Mine Mortelles",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "死亡矿井",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -193,7 +193,7 @@
         "en": "Lv20 common materials, Costume sets and Runestones.",
         "fr": "Materiel commun Nv20, Costumes et Pierres runiques",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "20级普通材料、套装符文石.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -212,7 +212,7 @@
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "荣誉宝石",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -231,7 +231,7 @@
         "en": "Pirate Camp",
         "fr": "Camp de pirates",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "海盗巢穴",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -250,7 +250,7 @@
         "en": "Lv30 common materials, Costume sets and Runestones.",
         "fr": "Materiel commun Nv30, Costumes et Pierres runiques",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "30级普通材料、套装符文石.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -269,7 +269,7 @@
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "荣誉宝石",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -288,7 +288,7 @@
         "en": "City’s Poisonous Fog",
         "fr": "Brouillard Toxic de la Ville",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "古城的毒雾",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -307,7 +307,7 @@
         "en": "Lv30 common materials, Costume sets and Runestones.",
         "fr": "Materiel commun Nv30, Costumes et Pierres runiques",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "30级普通材料、套装符文石.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -326,7 +326,7 @@
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "荣誉宝石",
         "zh-tw":"",
         "kr": "",
         "ru": "",
