--- a/Translation/config.json
+++ b/Translation/config.json
@@ -3,8 +3,8 @@
         "en":"Sound",
         "fr":"Audio",
         "es":"Sonido",
-        "zh-cn":"聲音",
-        "zh-tw":"",
+        "zh-cn":"声音",
+        "zh-tw":"聲音",
         "kr":"",
         "ru":"Звук",
         "tr":"",
@@ -22,8 +22,8 @@
         "en":"Graphics",
         "fr":"Graphiques",
         "es":"Gráficos",
-        "zh-cn":"畫面",
-        "zh-tw":"",
+        "zh-cn":"画面",
+        "zh-tw":"畫面",
         "kr":"",
         "ru":"Графика",
         "tr":"",
@@ -41,8 +41,8 @@
         "en":"Volume of ambience",
         "fr":"Volume des musiques d'ambiances",
         "es":"Volumen del ambiente",
-        "zh-cn":"音量 環境音樂",
-        "zh-tw":"",
+        "zh-cn":"音量 环境音乐",
+        "zh-tw":"音量 環境音樂",
         "kr":"",
         "ru":"Звук окружения",
         "tr":"",
@@ -60,8 +60,8 @@
         "en":"Volume of sound effects",
         "fr":"Volume des effets sonores",
         "es":"Volumen de los efectos de sonido",
-        "zh-cn":"音量 聲音效果",
-        "zh-tw":"",
+        "zh-cn":"音量 声音效果",
+        "zh-tw":"音量 聲音效果",
         "kr":"",
         "ru":"Громкость звуковых эффектов",
         "tr":"",
