--- a/Translation/event.json
+++ b/Translation/event.json
@@ -3,8 +3,8 @@
         "en":"Enter",
         "fr":"Entrer",
         "es":"Entra en",
-        "zh-cn":"進入",
-        "zh-tw":"",
+        "zh-cn":"进入",
+        "zh-tw":"進入",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -22,8 +22,8 @@
         "en":"Leave",
         "fr":"Sortir",
         "es":"Deje",
-        "zh-cn":"離開",
-        "zh-tw":"",
+        "zh-cn":"离开",
+        "zh-tw":"離開",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -41,8 +41,8 @@
         "en":"Not Time",
         "fr":"Horaires",
         "es":"Horarios",
-        "zh-cn":"時間不符",
-        "zh-tw":"",
+        "zh-cn":"时间不符",
+        "zh-tw":"時間不符",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -60,8 +60,8 @@
         "en":"Intro.",
         "fr":"Intro.",
         "es":"Intro.",
-        "zh-cn":"介紹",
-        "zh-tw":"",
+        "zh-cn":"介绍",
+        "zh-tw":"介紹",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -80,7 +80,7 @@
         "fr":"Coeur de lave X 10",
         "es":"Lava Core X 10",
         "zh-cn":"熔岩核心 X 10",
-        "zh-tw":"",
+        "zh-tw":"熔岩核心 X 10",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -99,7 +99,7 @@
         "fr":"Taux de rafraichissement du Coeur de Lave plus élevé",
         "es":"Mayor velocidad de refresco del Core de Lava",
         "zh-cn":"加快熔岩核心刷新速度",
-        "zh-tw":"",
+        "zh-tw":"加快熔岩核心刷新速度",
         "kr":"",
         "ru":"",
         "tr":"",
