--- a/Translation/general.json
+++ b/Translation/general.json
@@ -3,7 +3,7 @@
         "en":"Guild",
         "fr":"Guilde",
         "es":"Gremio",
-        "zh-cn":"公會",
+        "zh-cn":"公会",
         "zh-tw":"",
         "kr":"",
         "ru":"Гильдия",
@@ -22,7 +22,7 @@
         "en":"Group",
         "fr":"Groupe",
         "es":"Grupo",
-        "zh-cn":"隊伍",
+        "zh-cn":"队伍",
         "zh-tw":"",
         "kr":"",
         "ru":"Группа",
@@ -41,7 +41,7 @@
         "en":"Player [{0}] has sent you a group request",
         "fr":"Le joueur [{0}] vous à envoyer une demande de groupe",
         "es":"",
-        "zh-cn":"玩家 [{0}] 對你發出了一個組隊邀請",
+        "zh-cn":"玩家 [{0}] 对你发出了一个组队邀请",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -60,7 +60,7 @@
         "en":"Gold",
         "fr":"Or",
         "es":"Oro",
-        "zh-cn":"金幣",
+        "zh-cn":"金币",
         "zh-tw":"",
         "kr":"",
         "ru":"Золото",
@@ -155,7 +155,7 @@
         "en":"Exp",
         "fr":"Exp",
         "es":"Exp",
-        "zh-cn":"經驗",
+        "zh-cn":"经验",
         "zh-tw":"",
         "kr":"",
         "ru":"Опыт",
@@ -174,7 +174,7 @@
         "en":"Element Exp",
         "fr":"Exp Élémentaire",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"元素经验",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -231,7 +231,7 @@
         "en":"Get Reward",
         "fr":"Obtenir la récompense",
         "es":"Obtener la recompensa",
-        "zh-cn":"獲取獎勵",
+        "zh-cn":"获取奖励",
         "zh-tw":"",
         "kr":"",
         "ru":"Получить вознаграждение",
@@ -250,7 +250,7 @@
         "en":"Double Reward",
         "fr":"Récompense Double",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"双倍奖励",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -269,7 +269,7 @@
         "en":"Quest Reward",
         "fr":"Récompense de quête",
         "es":"Recompensa de misión",
-        "zh-cn":"任務獎勵",
+        "zh-cn":"任务奖励",
         "zh-tw":"",
         "kr":"",
         "ru":"Награда за задание",
@@ -288,7 +288,7 @@
         "en":"Class",
         "fr":"Classe",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"等级",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -307,7 +307,7 @@
         "en":"Warrior",
         "fr":"Guerrier",
         "es":"Guerrero",
-        "zh-cn":"戰士",
+        "zh-cn":"战士",
         "zh-tw":"",
         "kr":"",
         "ru":"Воин",
@@ -326,7 +326,7 @@
         "en":"Ranger",
         "fr":"Archer",
         "es":"Arquero",
-        "zh-cn":"游俠",
+        "zh-cn":"弓箭手",
         "zh-tw":"",
         "kr":"",
         "ru":"Лучник",
@@ -345,7 +345,7 @@
         "en":"Mage",
         "fr":"Mage",
         "es":"Mago",
-        "zh-cn":"魔法師",
+        "zh-cn":"魔法师",
         "zh-tw":"",
         "kr":"",
         "ru":"Маг",
@@ -402,7 +402,7 @@
         "en":"Common",
         "fr":"Commun",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"常见",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -421,7 +421,7 @@
         "en":"Uncommon",
         "fr":"Peu Commun",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"罕见",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -440,7 +440,7 @@
         "en":"Rare",
         "fr":"Rare",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"稀有",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -459,7 +459,7 @@
         "en":"Epic",
         "fr":"Épique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"史诗",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -497,7 +497,7 @@
         "en":"Legendary",
         "fr":"Légendaire",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"传奇",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -516,7 +516,7 @@
         "en":"Artifact",
         "fr":"Artefact",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"手工制品",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -535,7 +535,7 @@
         "en":"Level",
         "fr":"Niveau",
         "es":"Nivel",
-        "zh-cn":"等級",
+        "zh-cn":"等级",
         "zh-tw":"",
         "kr":"",
         "ru":"Уровень",
@@ -573,7 +573,7 @@
         "en":"Bind on Equip",
         "fr":"Lié quand Équipé",
         "es":"Enlazar al Equipar",
-        "zh-cn":"裝備綁定",
+        "zh-cn":"装备绑定",
         "zh-tw":"",
         "kr":"",
         "ru":"Привязывается при экипировке",
@@ -592,7 +592,7 @@
         "en":"Bind on Pickup",
         "fr":"Lié quand Ramassé",
         "es":"Enlazar al recoger",
-        "zh-cn":"拾取綁定",
+        "zh-cn":"拾取绑定",
         "zh-tw":"",
         "kr":"",
         "ru":"Привязывается при поднятии",
@@ -611,7 +611,7 @@
         "en":"Bound",
         "fr":"Lié",
         "es":"Unido",
-        "zh-cn":"已綁定",
+        "zh-cn":"已绑定",
         "zh-tw":"",
         "kr":"",
         "ru":"Привязан",
@@ -687,7 +687,7 @@
         "en":"Confirm sale {0} to get {1} Gold ?",
         "fr":"Confirmer vendre {0} pour obtenir {1} Or ?",
         "es":"¿Confirmar venta {0} para obtener {1} oro?",
-        "zh-cn":"確認出售 {0} 並獲得 {1} 金幣嗎 ?",
+        "zh-cn":"确认出售 {0} 并获得 {1} 金币吗 ?",
         "zh-tw":"",
         "kr":"",
         "ru":"Поддтверждаете продажу {0} за {1} золота?",
@@ -706,7 +706,7 @@
         "en":"Buy",
         "fr":"Acheter",
         "es":"Comprar",
-        "zh-cn":"購買",
+        "zh-cn":"购买",
         "zh-tw":"",
         "kr":"",
         "ru":"Купить",
@@ -763,7 +763,7 @@
         "en":"List",
         "fr":"Liste",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"列表",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -782,7 +782,7 @@
         "en":"No cost",
         "fr":"Aucun coût",
         "es":"",
-        "zh-cn":"無消耗",
+        "zh-cn":"无消耗",
         "zh-tw":"",
         "kr":"",
         "ru":"Бесплатно",
@@ -858,7 +858,7 @@
         "en":"Minute",
         "fr":"Minute",
         "es":"",
-        "zh-cn":"分鐘",
+        "zh-cn":"分钟",
         "zh-tw":"",
         "kr":"",
         "ru":"Минута",
@@ -896,7 +896,7 @@
         "en":"Elite",
         "fr":"Élite",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"精英",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -915,7 +915,7 @@
         "en":"Chief Elite",
         "fr":"Chef Élite",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"精英",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -934,7 +934,7 @@
         "en":"Expel",
         "fr":"Expulser",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"踢出",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -953,7 +953,7 @@
         "en":"Transfer",
         "fr":"Transfert",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"转让",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -972,7 +972,7 @@
         "en":"Leave",
         "fr":"Partir",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"离开",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -991,7 +991,7 @@
         "en":"Enter",
         "fr":"Entrer",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"进入",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1010,7 +1010,7 @@
         "en":"Exit",
         "fr":"Sortir",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"出口",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1029,7 +1029,7 @@
         "en":"Reward",
         "fr":"Récompense",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"奖励",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1048,7 +1048,7 @@
         "en":"Max",
         "fr":"Max",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"最大",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1067,7 +1067,7 @@
         "en":"Next Level",
         "fr":"Niveau Suivant",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"下一级",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1086,7 +1086,7 @@
         "en":"Reset",
         "fr":"Réinitialiser",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"重置",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1105,7 +1105,7 @@
         "en":"All",
         "fr":"Tout",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"全部",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1124,7 +1124,7 @@
         "en":"Daily",
         "fr":"Journalière",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"每日",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1143,7 +1143,7 @@
         "en":"Second",
         "fr":"Seconde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"第二",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1162,7 +1162,7 @@
         "en":"Sec",
         "fr":"Sec",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"秒",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1181,7 +1181,7 @@
         "en":"Minute",
         "fr":"Minute",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"分钟",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1200,7 +1200,7 @@
         "en":"Min",
         "fr":"Min",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"分钟",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1219,7 +1219,7 @@
         "en":"Hour",
         "fr":"Heure",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"小时",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1238,7 +1238,7 @@
         "en":"H",
         "fr":"H",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"小时",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1257,7 +1257,7 @@
         "en":"Day",
         "fr":"Jour",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"日",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1276,7 +1276,7 @@
         "en":"D",
         "fr":"J",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"日",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1295,7 +1295,7 @@
         "en":"Month",
         "fr":"Mois",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"月",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1314,7 +1314,7 @@
         "en":"M",
         "fr":"M",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"月",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1333,7 +1333,7 @@
         "en":"Miss",
         "fr":"Raté",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"未命中",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1352,7 +1352,7 @@
         "en":"Name",
         "fr":"Nom",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"名字",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1371,7 +1371,7 @@
         "en":"Item",
         "fr":"Objet",
         "es":"",
-        "zh-cn":"道具復活",
+        "zh-cn":"道具复活",
         "zh-tw":"",
         "kr":"",
         "ru":"Предмет",
@@ -1390,7 +1390,7 @@
         "en":"Gear",
         "fr":"Equipement",
         "es":"",
-        "zh-cn":"裝備",
+        "zh-cn":"装备",
         "zh-tw":"",
         "kr":"",
         "ru":"Экипировка",
@@ -1409,7 +1409,7 @@
         "en":"Info",
         "fr":"Info",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"信息",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1428,7 +1428,7 @@
         "en":"Back",
         "fr":"Retour",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"返回",
         "zh-tw":"",
         "kr":"",
         "ru":"",
