--- a/Translation/map.json
+++ b/Translation/map.json
@@ -497,7 +497,7 @@
         "en":"Chaotic Jungles North",
         "fr":"Nord des Jungles Chaotiques",
         "es":"",
-        "zh-cn":"喧嚣丛林南",
+        "zh-cn":"喧嚣丛林北部",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -516,7 +516,7 @@
         "en":"Deathly Mineshaft",
         "fr":"Mines Mortelles",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"死亡矿井",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -535,7 +535,7 @@
         "en":"Summoning Hall",
         "fr":"Salle d'Invocation",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"召唤大厅",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -554,7 +554,7 @@
         "en":"Pirate Camp Site",
         "fr":"Site du camp de pirates",
         "es":"",
-        "zh-cn":"海盗巢穴",
+        "zh-cn":"海盗营地入口",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -573,7 +573,7 @@
         "en":"Pirate Camp",
         "fr":"Camp Pirate",
         "es":"",
-        "zh-cn":"海盗巢穴",
+        "zh-cn":"海盗营地",
         "zh-tw":"",
         "kr":"",
         "ru":"",
