--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1025,6 +1025,82 @@
         "th":"",
         "id":""
     },
+    "map.C2_Fiery_Tower_Floor_1.name":{
+        "en":"Fiery Tower 1st floor",
+        "fr":"Tour de Feu 1er etage",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Fiery_Tower_Floor_2.name":{
+        "en":"Fiery Tower 2nd floor",
+        "fr":"Tour de Feu 2em etage",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Fiery_Tower_Floor_3.name":{
+        "en":"Fiery Tower 3rd floor",
+        "fr":"Tour de Feu 3em etage",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Fiery_Tower_Floor_4.name":{
+        "en":"Fiery Tower 4th floor",
+        "fr":"Tour de Feu 4em etage",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C2_Sultan_Ruins.name":{
         "en":"Sultan Ruins",
         "fr":"Ruines du Sultan",
