--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1101,6 +1101,44 @@
         "th":"",
         "id":""
     },
+    "map.C2_Fiery_Tower_Scorching_Path.name":{
+        "en":"Fiery Tower Scorching Path",
+        "fr":"Tour de Feu Sentier Brûlant",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Fiery_Tower_Scorching_Wrath.name":{
+        "en":"Fiery Tower Scorching Wrath",
+        "fr":"Tour de Feu Courroux Ardent",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C2_Sultan_Ruins.name":{
         "en":"Sultan Ruins",
         "fr":"Ruines du Sultan",
