--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3480,7 +3480,7 @@
         "en":"[Spirit Egg] Poacher",
         "fr":"[Oeuf d'esprit] Braconnier",
         "es":"",
-        "zh-cn":""[精灵蛋] 盗猎者",
+        "zh-cn":"[精灵蛋] 盗猎者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3499,7 +3499,7 @@
         "en":"[Spirit Egg] Bandit",
         "fr":"[Oeuf d'esprit] Bandit",
         "es":"",
-        "zh-cn":""[精灵蛋] 强盗",
+        "zh-cn":"[精灵蛋] 强盗",
         "zh-tw":"",
         "kr":"",
         "ru":"",
