--- a/Translation/item.json
+++ b/Translation/item.json
@@ -15442,10 +15442,10 @@
         "id":""
     },
     "item.35014.description":{
-        "en":"Right click to get :<br> - Greater Healing Potion x 10<br> - Greater Magic Potion x 10<br> - Mini Teleport Crystal<br>- Black Magic x 3000 x 4000",
+        "en":"Right click to get :<br> - Greater Healing Potion x 10<br> - Greater Magic Potion x 10<br> - Mini Teleport Crystal<br> - Black Magic x 4000",
         "fr":"Click droit pour obtenir:<br> - Grande Potion de Guérison x 10<br> - Grande Potion de Mana x 10<br> - Mini Cristal de Téléportation<br> - Magie Noire x 4000",
         "es":"",
-        "zh-cn":""右键点击获得 :<br> -大型治疗药水x 10<br> -大型魔力药水x 10<br> - 迷你传送水晶<br> - 魔能x 4000"",
+        "zh-cn":"右键点击获得 :<br> -大型治疗药水x 10<br> -大型魔力药水x 10<br> - 迷你传送水晶<br> - 魔能x 4000",
         "zh-tw":"",
         "kr":"",
         "ru":"",
