--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -904,7 +904,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"So sánh chỉ số Né Tránh và Né Tránh Kỹ Năng và tăng thêm tối đa {0}% vào cho giá trị thấp nhất trong 2 chỉ số đó. Trong trường hợp tăng thêm này thì chỉ số thấp nhất không thể vượt quá chỉ số cao nhất.<br><br><i>Ví dụ:<br> - Cộng thêm +30%<br> - Né Tránh: 20%<br> - Né Tránh Kỹ Năng: 35%<br> Né Tránh bây giờ là 35% và không phải là 60%</i>",
+        "vi":"So sánh chỉ số Né Tránh và Né Tránh Kỹ Năng và tăng thêm tối đa {0}% vào cho giá trị thấp nhất trong 2 chỉ số đó. Trong trường hợp tăng thêm này thì chỉ số thấp nhất không thể vượt quá chỉ số cao nhất.<br><br><i>Ví dụ:<br> - Cộng thêm +30%<br> - Né Tránh: 20%<br> - Né Tránh Kỹ Năng: 35%<br> Né Tránh bây giờ là 35% và không phải là 50%</i>",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7622,7 +7622,7 @@
         "en": "Increases Accuracy by {0}% and Skill Accuracy by {1}%",
         "fr": "Augmente Précision de {0}% et Précision Compétence de {1}%",
         "es": "",
-        "zh-cn": "命中+{0}%，技能命中+{1}%"",
+        "zh-cn": "命中+{0}%，技能命中+{1}%",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -10415,7 +10415,7 @@
         "en": "Increase Crit Accuracy by {0}%",
         "fr": "Augmente Précision Critique de {0}%",
         "es": "",
-        "zh-cn": "暴击命中+{0}%"",
+        "zh-cn": "暴击命中+{0}%",
         "zh-tw":"",
         "kr": "",
         "ru": "",
