--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10691,6 +10691,25 @@
         "th":"",
         "id":""
     },
+    "item.12004.name":{
+        "en":"Spirit Wisdom Book",
+        "fr":"Livre de Sagesse d'Esprit",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.13000.name":{
         "en":"Skill Book [Slam]",
         "fr":"Livre de Sort [Coup Puissant]",
@@ -13820,6 +13839,25 @@
         "jp":"",
         "pt":"",
         "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 70-100]",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41024.name":{
+        "en":"Spirit Skill Seal",
+        "fr":"Sceau de Compétence d'Esprit",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
