--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1409,7 +1409,7 @@
         "en":"Seek",
         "fr":"Allez voir",
         "es":"",
-        "zh-cn":"查找",
+        "zh-cn":"寻找",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2739,7 +2739,7 @@
         "en":"Lv. Min",
         "fr":"Nv. Min",
         "es":"",
-        "zh-cn":"等级下限",
+        "zh-cn":"Lv. Min",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2758,7 +2758,7 @@
         "en":"Lv. Max",
         "fr":"Nv. Max",
         "es":"",
-        "zh-cn":"等级上限",
+        "zh-cn":"Lv. Max",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3261,6 +3261,25 @@
         "jp":"",
         "pt":"",
         "vi":"Bản Đồ Hiện Tại",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.map.askTeleport":{
+        "en":"Teleport to this map will cost: {0} x1",
+        "fr":"La téléportation à cet endroit coûtera: {0} x1",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
